--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="box">
            <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url( 'box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
@@ -96,21 +96,21 @@
      <div class="box">
         <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url('box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
      <div class="box">
         <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url('box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
      <div class="box">
         <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url('box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
@@ -118,7 +118,7 @@
      <div class="box">
            <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url('box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
@@ -126,21 +126,21 @@
      <div class="box">
         <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url('box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
      <div class="box">
         <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url('box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
      <div class="box">
         <div class="box-contant">
             <h2>Helth & personal care</h2>
-            <div class="box-img" style="background-image: url('box1.jpg');"> </div>
+            <div class="box-img" style="background-image: url('Box1.jpg');"> </div>
             <p>see more</p>
          </div>
      </div>
